# MIW_AutoFit

./: .coverage  .gitignore  LICENSE  MIW_autofit.py  MIW_autofit_directory.spec  MIW_autofit_standalone.spec  README.md  conftest.py  dev_notes.md  frontend.cfg  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.ipynb_checkpoints/: testing_jupyter-checkpoint.ipynb
Benchmarking/: linear_data_yerrors.ods
autofit/: __init__.py  frontend.cfg
autofit.egg-info/: PKG-INFO  requires.txt
data/: 3x+7.ods  Total_Standing.xlsx  constants_or_not.csv  file_example_XLS_10.xls  large_x_small_y.csv  likelihood_slope.txt  linear_data_no_errors.csv  linear_data_xerrors_yerrors.csv  pigs.csv  random_sample_from_normal_distribution.csv  speed graphs maybe final.xlsx  tester.php  vlarge_x_small_y.csv
examples/: frontend_startup.py  frontend_startup.spec  linear_model.py  ~frontend_startup.spec
licensing/: generate_licenses.py
plots/: residuals.csv
src/: MIWcomp.py  MIWhead.py  MIWprod.py  MIWsum.py  composite_function.py  data_handler.py  datum1D.py  file_handler.py  frontend.py  frontend_left.py  optimizer.py  package.py  primitive_function.py  validator.py
src_no_typehints/: clean_src.py  cleaned_composite_function.py  cleaned_data_handler.py  cleaned_frontend.py  cleaned_primitive_function.py  composite_function.py  data_handler.py  datum1D.py  frontend.py  optimizer.py  primitive_function.py  validator.py
tests/: .coverage  analyze_error_code.py  test_MIWcomp.py  test_MIWprod.py  test_MIWsum.py  test_composite_function.py  test_optimizer.py  test_printing_trees.py  (+1 more)
(+47 files in other folders)
